--- a/playbook.yml
+++ b/playbook.yml
@@ -68,14 +68,12 @@
                     image: "{{ image_name }}:{{ version }}"
 
     - name: Wait for rollout to complete
+      kubernetes.core.k8s_info:
+        api_version: apps/v1
+        kind: Deployment
+        name: "{{ app_name }}"
+        namespace: "{{ namespace }}"
+      register: rollout_status
       retries: 10
       delay: 10
-      until: rollout_status.resources[0].status.conditions[?(@.type=="Available")].status | first == "True"
-      block:
-        - name: Get updated deployment status
-          kubernetes.core.k8s_info:
-            api_version: apps/v1
-            kind: Deployment
-            name: "{{ app_name }}"
-            namespace: "{{ namespace }}"
-          register: rollout_status
+      until: rollout_status.resources[0].status.conditions | selectattr('type', 'equalto', 'Available') | map(attribute='status') | first == "True"
